2008-11-29  Loic Dachary <loic@dachary.org>

 	* Release 1.7.1

2008-11-29  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.startHandAndReceiveCards): test no longer
	fails when fr_FR not present; doesn't need adjustor for that.
	(PokerAvatarTestCase.setLocale): test no longer fails when fr_FR
	not present; doesn't need adjustor for that.

2008-11-29  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in
	(PokerServiceTestCase.configValues): Added check for
	only-English-available message on failed locale lookup.

	* pokernetwork/pokerservice.py (PokerService._lookupTranslationFunc):
	Fixed required call to gettext object install().

2008-11-29  Loic Dachary <loic@dachary.org>

	* tests/test-pokersite.py.in: locale2translationFunc mockup taks an
	  additional argument

2008-11-29  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/pokerservice.py, tests/test-pokerservice.py.in:
	Reverted Loic's changes below to these files in favor of mine from
	last night.

2008-11-29  Loic Dachary <loic@dachary.org>

	* pokernetwork/pokerservice.py, tests/test-pokerservice.py.in: all
	  messages returned by gettext are encoded in iso-8859-1
	* pokernetwork/pokertable.py, tests/test-pokertable.py.in: protect
	  the update function of pokertable against reentrance and print
	  stacktrace for better diagnostic when it happens

2008-11-28  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarNoClientServerTestCase.MockService.__init__): Added
	encoding option to transFunc.
	(PokerAvatarTestCase.test71_setLocaleAlwaysValid): Changed locale
	string.
	(PokerAvatarTestCase.test15_handPlay): Changed locale strings.
	(PokerAvatarTestCase.test15a_handPlay_dbLocalesAndOverridesThereof):
	Changed locale strings.
	(PokerAvatarTestCase.startHandAndReceiveCards): Changed locale
	strings.
	(PokerAvatarNoClientServerTestCase.test03_relogin_localeNotFound):
	Rewrote lambda as transFunc; added arg.  Removed expectation of