@@ -60,7 +60,7 @@ CREATE TABLE users (
   -- 1 is a regular player, 0 is an observer and cannot play, 2 is admin
   privilege INT DEFAULT 1,
   -- locale
-  locale VARCHAR(32) DEFAULT "en_US.UTF-8",
+  locale VARCHAR(32) DEFAULT "en_US",
 
   rating INT DEFAULT 1000,
   future_rating FLOAT DEFAULT 1000,
